@@ -1,3 +1,7 @@
+2004-02-24    <jeff@mini.nerble.net>
+
+	* mapedit/shapegroup.cc: Show builtin groups (monsters, ammo, etc.)
+
 2004-02-19    <jeff@mini.nerble.net>
 
 	* combat.cc (Combat_schedule): Use dexterity during combat.
